# 2021sandbox

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  BUILD.bazel  Makefile  README.md  Tiltfile  go.mod
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  labeler.yml
.github/actions/conflict-detector/: action.yml  package-lock.json  package.json  tsconfig.json
.github/actions/conflict-detector/src/: main.ts  pr.ts
.github/actions/delete-gcr/: action.yml  package-lock.json  package.json  tsconfig.json
.github/actions/delete-gcr/src/: gcr.test.ts  gcr.ts  main.ts
.github/workflows/: codeql.yaml  gcr.yaml  go-build.yaml  go.alchemy.yaml  go.example.build.yaml  go.example.yaml  go.yaml  labeler.yaml  main.yaml  proto.yaml  rust.yaml  ts.conflict-detector.yaml  ts.delete-gcr.yaml  ts.minimatchex.yaml  ts.yaml
.github/workflows/ts/: delete-gcr.yaml  minimatchex.yaml
api/alchemy/v1alpha/: resources.proto
api/example/v1alpha/: example.proto
cmd/example/: BUILD.bazel  main.go  main_test.go
deployments/: example.yaml
docs/: README.md
internal/proto/api/alchemy/v1alpha/: resources.pb.go
internal/proto/api/example/v1alpha/: example.pb.go  example_grpc.pb.go
scripts/: protoc.sh
tools/rust/sbx/: Cargo.toml  Makefile  build.rs
tools/rust/sbx/src/: main.rs
tools/rust/sbx/src/example/: create.rs  delete.rs  get.rs  mod.rs
tools/ts/minimatchex/: package-lock.json  package.json
tools/ts/minimatchex/src/: main.test.ts
