load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "example_lib",
    srcs = ["main.go"],
    importpath = "github.com/nokamoto/sandbox/cmd/example",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "example",
    embed = [":example_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "example_test",
    srcs = ["main_test.go"],
    embed = [":example_lib"],
)
